# vipassana-ai-teacher

./: .env.example  .gitignore  README.md  dev.sh  pyproject.toml  requirements.txt  sources.json
app/: client.py  config.py  critic.py  generator.py  ingest.py  main.py  models.py  orchestrator.py  prompts.py  retriever.py
