[tool.poetry]
name = "vipassana-ai-teacher"
version = "0.1.0"
description = "Multi-agent RAG chatbot grounded in Vipassana teaching documents"
authors = ["aishwarya"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
python-dotenv = "^1.0.0"
pydantic = "^2.5.0"
anthropic = "^0.28.0"
numpy = "<2.0"
onnxruntime = "==1.23.2"
chromadb = ">=0.4.0,<0.5.0"
sentence-transformers = ">=2.7.0,<4.0.0"
pypdf = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
